--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -1,8 +1,8 @@
 <form class="{{cssClass}}" autocomplete="off">
-	<section class="header">
-		<h1>Clock Keeper</h1>
+	<section class="item-top flex-horizontal">
+		<input class="item-name top-title shadowed" type="text" value="{{item.name}}" readonly />
 	</section>
-	<section class="main">
+	<section class="item-main main">
 		<div class="scene-selection">
 			<label>Scene:</label>
 			<select name="data.targetScene">
