--- a/templates/npc-sheet.hbs
+++ b/templates/npc-sheet.hbs
@@ -3,7 +3,7 @@
 	<img class="char-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" />
 	<img class="char-img-bg" src="{{actor.img}}" />
 
-	<section class="char-top">
+	<section class="sheet-top">
 		<input class="char-name top-title shadowed" type="text" name="name" value="{{actor.name}}" placeholder="Who Are You?">
 		<input class="char-concept top-subtitle shadowed" type="text" name="data.concept" value="{{data.concept}}" placeholder="Concept">
 
