--- a/scss/sheets/_sheets.scss
+++ b/scss/sheets/_sheets.scss
@@ -9,7 +9,8 @@
 .window-content {
 	background: var(--blades-black);
 	padding: var(--content-padding);
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 
 	form.editable {
 		@import "../core/globals";
@@ -32,27 +33,53 @@
 .window-content form.editable .char-img-bg {
 	position: absolute;
 	width: calc(100% + 2 * var(--content-padding)) !important;
-	top: -20%;
-	left: 0;
-	filter: saturate(0%) blur(3px);
-	opacity: 0.5;
-	transform: scaleX(-1);
-	mask-image: linear-gradient(to bottom, black, transparent);
+	height: calc(100% - var(--content-padding)) !important;
+	left: calc(-1 * var(--content-padding));
+	overflow: hidden;
 	pointer-events: none;
+
+	> img {
+		position: absolute;
+		width: 100%;
+		height: auto;
+		top: -20%;
+		left: 0;
+		filter: saturate(0%) blur(3px);
+		opacity: 0.5;
+		transform: scaleX(-1);
+		mask-image: linear-gradient(to bottom, black, transparent);
+		pointer-events: none;
+	}
 }
 
 .window-content section { position: relative; z-index: 2 }
 
-.window-content section.char-top {
+.window-content section.sheet-top, .window-content section.item-top {
 	display: grid;
 	width: calc(100% + 2 * var(--content-padding));
 	left: calc(-1 * var(--content-padding));
+	grid-template-areas:
+		"title"
+		"subtitle";
+	grid-gap: 0;
 	grid-auto-columns: 1fr;
 	grid-auto-rows: auto;
 	place-items: center stretch;
 	pointer-events: none;
+	position: relative;
 
-	input, a, .item-title, .sub-actor-name { pointer-events: auto }
+	&.flex-horizontal {
+		display: flex;
+		align-items: center;
+	}
+
+	img[data-edit] {
+		// position: absolute;
+		height: 75px;
+		margin: 0 12.5px 12.5px 0;
+	}
+
+	img[data-edit], input, a, .item-title, .sub-actor-name { pointer-events: auto }
 
 	> * {
 		z-index: 2;
@@ -73,7 +100,7 @@
 		height: var(--top-title-height);
 		margin-top: calc(-1 * var(--content-padding));
 		position: relative;
-		top: calc(-1 * (var(--top-title-font-size) / 6));
+		// top: calc(-1 * (var(--top-title-font-size) / 6));
 	}
 
 	.top-subtitle {
@@ -87,7 +114,55 @@
 		font-family: var(--font-decorative);
 		font-size: var(--top-subtitle-font-size);
 		height: var(--top-subtitle-height);
-		margin-top: calc(-1 * var(--top-subtitle-font-size));
+		margin-top: calc(-0.75 * var(--top-subtitle-font-size));
+	}
+}
+
+.window-content .effects-list {
+	width: 100%;
+}
+
+.window-content .tab-label {
+	display: block;
+	background: var(--blades-grey);
+	padding: toRem(3px) toRem(20px);
+	position: relative;
+	// border: 2px solid var(--blades-black);
+	// border-top: none;
+	height: toRem(24px);
+	width: calc(100% + var(--content-padding));
+	left: calc(-1 * var(--content-padding));
+	margin-bottom: toRem(5px);
+
+	display: flex;
+	justify-content: space-between;
+	justify-content: flex-start;
+	align-items: center;
+
+	.item-add-popup {
+		position: absolute;
+		left: toRem(4px);
+		transform: translate(0, -50%);
+		top: 50%;
+		line-height: 1;
+		margin-top: toRem(2px);
+		padding: 0;
+		// background: red;
+		font-weight: bold;
+		color: var(--blades-white-bright);
+		color: var(--blades-black-dark);
+
+		&:hover {
+			color: var(--blades-white-bright);
+		}
+	}
+
+	.tab-title {
+		font-family: var(--font-emphasis);
+		font-size: toRem(14px);
+		color: var(--blades-white-bright);
+		text-transform: uppercase;
+
 	}
 }
 
@@ -134,54 +209,7 @@
 	}
   .tab[data-tab] {
     display: none;
-		overflow-y: scroll;
-
-		.tab-label {
-			display: block;
-			background: var(--blades-grey);
-			padding: toRem(3px) toRem(20px);
-			position: relative;
-			// border: 2px solid var(--blades-black);
-			// border-top: none;
-			height: toRem(24px);
-			width: calc(100% + var(--content-padding));
-			left: calc(-1 * var(--content-padding));
-			margin-bottom: toRem(5px);
-
-			display: flex;
-			justify-content: space-between;
-			justify-content: flex-start;
-			align-items: center;
-
-			.item-add-popup {
-				position: absolute;
-				left: toRem(4px);
-				transform: translate(0, -50%);
-				top: 50%;
-				line-height: 1;
-				margin-top: toRem(2px);
-				padding: 0;
-				// background: red;
-				font-weight: bold;
-				color: var(--blades-white-bright);
-				color: var(--blades-black-dark);
-
-				&:hover {
-					color: var(--blades-white-bright);
-				}
-			}
-
-			.tab-title {
-				font-family: var(--font-emphasis);
-				font-size: toRem(14px);
-				color: var(--blades-white-bright);
-				text-transform: uppercase;
-
-			}
-		}
-
-		.tab-label {
-		}
+		overflow-y: auto;
 
     &.active {
       display: block;
@@ -211,7 +239,7 @@
 
 		.clock-frame {
 			stroke-width: 15px;
-			stroke: var(--blades-black);
+			stroke: var(--blades-black-dark-fade);
 			overflow: visible;
 		}
 	}
