--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,22 +5,22 @@
 @import './core/mixins';
 @import './fonts.scss';
 
-:root {
-	scrollbar-color: var(--blades-grey) var(--blades-black-dark-fade);
+:root, * {
+	scrollbar-color: var(--blades-white) var(--blades-black);
 	scrollbar-width: thin;
 }
 
-::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: var(--blades-spacer-sm);
 }
 
-::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 0 1px rgba(var(--color-background-darkest), 0.5);
 	border: none;
 	border-radius: 0;
 }
 
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
 	background-color: rgba(var(--color-background-light), 1);
 	border: none;
 	border-radius: 0;
@@ -28,7 +28,7 @@
 }
 
 :root {
-	* {
+	&, * {
 		@import './core/vars';
 		@import './core/components';
 	}
@@ -55,14 +55,6 @@
 				--font-weight-heading: normal;
 				--text-shadow-heading: none;
 				--line-height-heading: 1.2;
-			}
-
-			h1,
-			h2,
-			h3,
-			h4 {
-				margin: 0;
-				border: 0;
 			}
 
 			.control-tools .scene-control:hover {
@@ -99,37 +91,48 @@
 			}
 		}
 
-
-
 		.app.window-app {
 			@import "./core/reset";
 			@import './core/globals';
 
 			.editor:not(.tinymce) {
+				position: relative;
+				overflow-x: hidden;
+				width: 100%;
 
 				.editor-edit {
 					display: block;
 					opacity: 0.25;
+					pointer-events: auto;
+					z-index: 1;
 
 					&:hover {
 						opacity: 1
 					}
 				}
 				.editor-content {
+					position: relative;
+					width: calc(100% + (2 * var(--content-padding)));
+					left: calc(-1 * var(--content-padding));
+					padding-left: var(--content-padding);
+					padding-right: var(--content-padding);
 					@import './tinymce/tinymce-content';
 				}
-
 			}
 
-			&.sheet/* ,
-			&.eunos-blades,
-			&.sheet.eunos-blades */ {
+			.editor.tinymce {
+				position: relative;
+				max-width: unset;
+				width: calc(100% + (2 * var(--content-padding)));
+				// left: calc(-1 * var(--content-padding));
+			}
+
+			&.sheet {
 
 				@import './sheets/sheets';
 
 				&.actor {
 					&.pc {
-						// @import 'import/character-sheet';
 						@import './sheets/pc-sheet';
 					}
 
@@ -140,6 +143,7 @@
 					&.crew {
 						@import 'import/crew-sheet';
 						@import './sheets/crew-sheet';
+						@import './sheets/pc-sheet';
 					}
 				}
 
