--- a/templates/items/ability-sheet.hbs
+++ b/templates/items/ability-sheet.hbs
@@ -1,23 +1,36 @@
 <form class="{{cssClass}}" autocomplete="off">
-    <header class="sheet-header">
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-        <div class="header-fields">
-            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}"/></h1>
-        </div>
-    </header>
+	<section class="item-top flex-horizontal">
+		<img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
+	</section>
+	<section class="item-main flex-vertical">
+		{{#if isEmbeddedItem}}
+		<label class="tab-label">
+			<span class="tab-title">Description</span>
+		</label>
+		{{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+		{{/if}}
 
-    {{!-- Sheet Body --}}
-    <section class="sheet-body flex">
-      {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
-    </section>
-    <div class="flex-vertical">
-      <label class="label-stripe">{{localize "BITD.AbilityPrice"}}</label>
-      <input data-dtype="Number" id="ability-price" type="text" name="data.price" value="{{data.price}}" placeholder="{{localize 'BITD.AbilityPrice'}}">
-      <label class="label-stripe">{{localize "BITD.AbilityClass"}}</label>
-      <input id="ability-playbook" type="text" name="data.playbook" value="{{data.playbook}}" placeholder="{{localize 'BITD.AbilityClass'}}">
-      {{#if isGM}}
-        <div class="label-stripe">{{localize "BITD.Effects"}}</div>
-        <div id="effects">{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}</div>
-      {{/if}}
-    </div>
+		<label class="tab-label">
+			<span class="tab-title">Rules</span>
+		</label>
+		{{editor content=data.rules target="data.rules" button=true owner=owner editable=editable}}
+
+		{{#if (test isGM "||" data.rules_notes)}}
+		<label class="tab-label">
+			<span class="tab-title">Additional Rules Notes</span>
+		</label>
+		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
+		{{/if}}
+
+		{{#if isGM}}
+			<label class="tab-label">
+				<span class="tab-title">Active Effects</span>
+				<a class="item-add-popup effect-control" data-action="create" title="Create Effect">
+						<i class="fas fa-plus-square"></i>
+				</a>
+			</label>
+			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+		{{/if}}
+	</section>
 </form>
