--- a/templates/items/crew_type-sheet.hbs
+++ b/templates/items/crew_type-sheet.hbs
@@ -1,12 +1,10 @@
 <form class="{{cssClass}} crew-type" autocomplete="off">
-  <header class="sheet-header">
-      <img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-      <div class="header-fields">
-          <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}"/></h1>
-      </div>
-  </header>
+	<section class="item-top flex-horizontal">
+		<img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
+	</section>
 
-  <section class="flex-vertical">
+  <section class="item-main flex-vertical">
 		<textarea class="crew-type-description" name="data.description" placeholder="(Description)" {{~#unless editable}} readonly{{/unless}}>{{data.description}}</textarea>
     <label class="label-stripe">{{localize "BITD.ExpClues"}}</label>
     {{editor content=data.experience_clues target="data.experience_clues" button=true owner=owner editable=editable}}
@@ -15,5 +13,12 @@
     <div id="turf-container">
 			{{> "systems/eunos-blades/templates/parts/turf-list.hbs" turfs_data=data.turfs can_edit=true editable=editable}}
 		</div>
+
+		{{#if isGM}}
+			<label class="tab-label">
+				<span class="tab-title">Active Effects</span>
+			</label>
+			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+		{{/if}}
   </section>
 </form>
