--- a/templates/items/gm_tracker-sheet.hbs
+++ b/templates/items/gm_tracker-sheet.hbs
@@ -1,17 +1,10 @@
 <form class="{{cssClass}} actor-sheet" autocomplete="off">
-    <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
-	<input type="text" id="character-{{actor._id}}-name" name="name" value="{{actor.name}} ">
-	<label for="character-{{actor._id}}-name">Name</label>
-	<input type="text" id="character-{{actor._id}}-short-description" name="data.description_short" value="{{data.description_short}} ">
-	<label for="character-{{actor._id}}-short-description">Short description</label>
-	<input type="text" id="character-{{actor._id}}-associated-playbook" name="data.associated_playbook" value="{{data.associated_playbook}} ">
-	<label for="character-{{actor._id}}-associated-playbook">Associated Class</label>
-	<input type="text" id="character-{{actor._id}}-description" name="data.description" value="{{data.description}} ">
-	<label for="character-{{actor._id}}-description">Description</label>
-	<input type="text" id="character-{{actor._id}}-associated-crew-type" name="data.associated_crew_type" value="{{data.associated_crew_type}} ">
-	<label for="character-{{actor._id}}-associated-crew-type">Associated Crew Type</label>
-	<input type="text" id="character-{{actor._id}}-notes" name="data.notes" value="{{data.notes}} ">
-	<label for="character-{{actor._id}}-notes">Notes</label>
-	<input type="text" id="character-{{actor._id}}-associated-faction" name="data.associated_faction" value="{{data.associated_faction}}" >
-	<label for="character-{{actor._id}}-associated-faction">Associated Faction</label>
+	<section class="item-top flex-horizontal">
+		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
+	</section>
+
+	<section class="item-main flex-vertical">
+
+
+	</section>
 </form>
