--- a/templates/items/simple-sheet.hbs
+++ b/templates/items/simple-sheet.hbs
@@ -3,9 +3,7 @@
 		<img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
 		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
-
-  {{!-- Sheet Body --}}
-  <section class="item-main flex-vertical">
+	<section class="item-main flex-vertical">
 		{{#if isEmbeddedItem}}
 		<label class="tab-label">
 			<span class="tab-title">Description</span>
@@ -25,14 +23,14 @@
 		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
 		{{/if}}
 
-		<div class="flex-horizontal">
-			<label>{{localize "BITD.Price"}}</label>
-			<input data-dtype="Number" type="number" name="data.price" value="{{data.price}}">
-		</div>
-
-    {{#if isGM}}
-      <div class="label-stripe">{{localize "BITD.Effects"}}</div>
-      <div id="effects">{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}</div>
-    {{/if}}
-  </section>
+		{{#if isGM}}
+			<label class="tab-label">
+				<span class="tab-title">Active Effects</span>
+				<a class="effect-control" data-action="create" title="Create Effect">
+						<i class="fas fa-plus-square"></i>
+				</a>
+			</label>
+			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+		{{/if}}
+	</section>
 </form>
