--- a/templates/items/vice-sheet.hbs
+++ b/templates/items/vice-sheet.hbs
@@ -4,8 +4,7 @@
 		<input class="item-name top-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 
-  {{!-- Sheet Body --}}
-  <section class="item-main flex-vertical">
+	<section class="item-main flex-vertical">
 		{{#if isEmbeddedItem}}
 		<label class="tab-label">
 			<span class="tab-title">Description</span>
@@ -25,14 +24,11 @@
 		{{editor content=data.rules_notes target="data.rules_notes" button=true owner=owner editable=editable}}
 		{{/if}}
 
-		<div class="flex-horizontal">
-			<label>{{localize "BITD.Price"}}</label>
-			<input data-dtype="Number" type="number" name="data.price" value="{{data.price}}">
-		</div>
-
-    {{#if isGM}}
-      <div class="label-stripe">{{localize "BITD.Effects"}}</div>
-      <div id="effects">{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}</div>
-    {{/if}}
-  </section>
+		{{#if isGM}}
+			<label class="tab-label">
+				<span class="tab-title">Active Effects</span>
+			</label>
+			{{> "systems/eunos-blades/templates/parts/active-effects.hbs"}}
+		{{/if}}
+	</section>
 </form>
